force-app/main/default/objects/EventRequirements__c/EventRequirements__c.object-meta.xml
<CustomObject>
    <label>イベント定義</label>
    <nameField>
        <label>定義名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>