force-app/main/default/objects/EventRequirements__c/fields/contents__c.field-meta.xml
<CustomField>
    <fullName>contents__c</fullName>
    <label>内容</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>