force-app/main/default/objects/EventRequirements__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>内容</label>
    <type>TextArea</type>
</CustomField>