force-app/main/default/objects/EventRequirements__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>呼び出しID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>