force-app/main/default/objects/EventRequirements__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一致ルール</fullName>
            </value>
            <value>
                <fullName>入力規則</fullName>
            </value>
            <value>
                <fullName>フロー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>